syntax = "proto3";

package pb;

//////////////////////////////////////////////////

service Seaweed {
  rpc SendHeartbeat(stream Heartbeat) returns (stream HeartbeatResponse) {}
}

//////////////////////////////////////////////////

message Heartbeat {
  bool   is_init = 1;
  string ip = 2;
  uint32 port = 3;
  string public_url = 4;
  uint32 max_volume_count = 5;
  uint64 max_file_key = 6;
  string data_center = 7;
  string rack = 8;
  repeated VolumeInformationMessage volumes = 9;
  uint32 admin_port = 10;
}
message HeartbeatResponse {
  uint64 volumeSizeLimit = 1;
  string secretKey = 2;
}

message VolumeInformationMessage {
  uint32 id = 1;
  uint64 size = 2;
  string collection = 3;
  uint64 file_count = 4;
  uint64 delete_count = 5;
  uint64 deleted_byte_count = 6;
  bool read_only = 7;
  uint32 replica_placement = 8;
  uint32 version = 9;
  uint32 ttl = 10;
}
